--- a/style.css
+++ b/style.css
@@ -103,4 +103,139 @@ p {
   .summary {
     padding-top: 2em;
   }
+  .intro a, .intro a:visited {
+    position: relative;
+    display: inline-block;
+    padding: 1px 10px 0 32px;
+    margin: -1px -10px -1px -6px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    color: #809b7e;
+    font-family: 'Julius Sans One', sans-serif;
+    text-transform: uppercase;
+  }
+  .intro a:hover, .intro a:focus {
+    z-index: 2;
+    color: #fff;
+    background: #3d8a9f;
+    text-decoration: none;
+  }
+  .intro a::before {
+    display: inline-block;
+    position: absolute;
+    top: 6px;
+    left: 8px;
+    padding: 2px;
+    color: #a9b995;
+    background: #d9e1cd;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -o-border-radius: 2px;
+    content: "D";
+    font-size: 16px;
+    text-indent: 0;
+  
+    /* icomoon.io defaults */
+    font-family: 'verdemoderna';
+    speak: none;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -webkit-transition: all 0.25s ease-out;
+    -moz-transition: all 0.25s ease-out;
+    transition: all 0.25s ease-out;
+  }
+  .intro a:hover::before {
+    color: #fff;
+    background: #357d93;
+  }
+  div.participation, div.benefits {
+    background-attachment: scroll, scroll, fixed;
+    background-color: rgba(138,188,159,0.5);
+    background-image: url(contours-opaque.png), url(gridlines-opaque.png), url(bamboo.png);
+    background-repeat: repeat, repeat, no-repeat;
+    background-size: auto, auto, cover;
+  }
+/* extra padding at the cutoffs */
+div.participation {
+  padding: 3em 0;
+  margin-top: 3em;
+}
+div.benefits {
+  padding-bottom: 3em;
+  margin-bottom: 3em;
+}
+div.participation h3, div.benefits h3 {
+  margin-top: 0;
+}
+div.participation p, div.benefits p {
+  margin-bottom: 0;
+}
 
+/* sidebar base styles */
+.sidebar {
+  background: #edf4f0;
+}
+.sidebar h3 {
+  display: none;
+}
+.sidebar a {
+  color: #607476;
+  text-decoration: none;
+}
+.sidebar a:hover, .sidebar a:focus {
+  color: #49968e;
+}
+.sidebar ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  overflow: hidden;
+}
+design-selection ul, .zen-resources ul {
+  margin: 0;
+}
+
+.design-selection li, .zen-resources li {
+  float: left;
+  width: 50%;
+  padding: 1.5em 10%;
+  border-top: solid 1px #d9e3dc;
+  color: #c0cac3;
+  font-style: italic;
+}
+.design-selection li:hover, .design-selection li:focus {
+  background: -moz-linear-gradient(left,
+    rgba(255,255,255,0) 0%,
+    rgba(255,255,255,0.5) 50%,
+    rgba(255,255,255,0) 100%)
+  ; /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, right top,
+    color-stop(0%,rgba(255,255,255,0)),
+    color-stop(50%,rgba(255,255,255,0.5)),
+    color-stop(100%,rgba(255,255,255,0)))
+  ; /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(left,
+    rgba(255,255,255,0) 0%,
+    rgba(255,255,255,0.5) 50%,
+    rgba(255,255,255,0) 100%)
+  ; /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(left,
+    rgba(255,255,255,0) 0%,
+    rgba(255,255,255,0.5) 50%,
+    rgba(255,255,255,0) 100%)
+  ; /* Opera 11.10+ */
+  background: -ms-linear-gradient(left,
+    rgba(255,255,255,0) 0%,
+    rgba(255,255,255,0.5) 50%,
+    rgba(255,255,255,0) 100%)
+  ; /* IE10+ */
+  background: linear-gradient(to right,
+    rgba(255,255,255,0) 0%,
+    rgba(255,255,255,0.5) 50%,
+    rgba(255,255,255,0) 100%)
+  ; /* W3C */
+}
